# launcher-bootstrap

./: .eslintrc.json  .gitignore  .taurignore  Cargo.toml  README.md  angular.json  package.json  pnpm-lock.yaml  postcss.config.cjs  postcss.config.js  tailwind.config.cjs  tailwind.config.js  webpack.config.cjs
.github/: dependabot.yaml
.github/workflows/: release.yaml  test.yaml
common/: Cargo.toml
common/src/: lib.rs  traits.rs
common/src/json/: metadata.rs  mod.rs
demo/: bootstrap.json  metadata.json  updater.json
json-metagen/: Cargo.toml
json-metagen/src/: autocomplete.rs  cli.rs  main.rs
src/: App.tsx  events.ts  main.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: constants.rs  main.rs
src-tauri/src/application/: commands.rs  config_file.rs  events.rs  link_events.rs  mod.rs  paths.rs  shortcut_template.desktop  shortcuts.rs
src-tauri/src/application/commands/: create_config.rs  errors.rs  fetch_config.rs  get_config.rs  get_configs.rs  mod.rs
src-tauri/src/deep_link/: linux.rs  mod.rs  windows.rs
src-tauri/src/remote/: config.rs  files.rs  files_config.rs  meta_config.rs  mod.rs  updater_config.rs
src-tauri/src/utils/: download.rs
src/app/: app-routing.module.ts  app.component.ts  app.module.ts
src/app/pages/home/: home.component.ts
src/app/pages/new-config/: new-config.component.css  new-config.component.html  new-config.component.ts
src/app/services/: routing-debug.service.ts  tauri-api.service.ts
src/app/types/: config.ts
src/components/: GlobalEventHandler.tsx
src/components/button/: Button.tsx  button.module.css
src/components/modal/: Modal.tsx
src/environments/: environment.prod.ts  environment.ts  type.ts
src/events/: shortcuts.ts
src/pages/: error.tsx  new-config.tsx  open-config.tsx
src/pages/open-config/: custom-theme.tsx  default-theme.tsx
src/router/: index.tsx
src/styles/pages/: new-config.module.css
src/utils/: config.ts
