[package]
name = "tauri-applauncher-bootstrap"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
url = { version = "2" }

[target.'cfg(windows)'.dependencies]
mslnk = "0.1"
interprocess = { git = "https://github.com/kotauskas/interprocess", default-features = false }
winreg = "0.50.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
